tests/NormalTests/paczka1/fuzzy1/82426701.err
Error in line 6: Ai2b7I S723 58,6
Error in line 9: S401 S930 26,8
Error in line 8: Ai2b7I A965 45,7
Error in line 14: woFgN1p S401 51,0
Error in line 22: Ai2b7I S401 88,0
Error in line 23: Ai2b7I S930 50,7
Error in line 32: x6ygIHJjE S930 81,19
Error in line 24: x6ygIHJjE A965 74,1
Error in line 37: 24j S930 46,7
